--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -74,6 +74,6 @@
         </div>
     </div>
     <footer class="fixed-bottom">
-        <p class="text-center text-white"><i>@Copyright, BlogApp 2022/i></p>
+        <p class="text-center">Copyright, BlogApp 2022</p>
     </footer>
     {% endblock%}
