--- a/app/templates/latest.html
+++ b/app/templates/latest.html
@@ -49,7 +49,7 @@
             </div>
             <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <form action="{{ url_for('main.delete_post', pitch_id = pitch.id) }}" method="POST">
+            <form action="{{ url_for('main.delete_post', blog_id =blog.id) }}" method="POST">
                 <input class="btn btn-danger btn-sm" type="submit" value="Delete">
             </form>
             </div>
