it will add the comments route in html

--- a/app/templates/new_blog.html
+++ b/app/templates/new_blog.html
@@ -9,10 +9,12 @@
 <div class="container">
     <div class="row">
         <div class="col-md-7 text-center">
+            <div class="card">
             <h3>{{title}}</h3>
             <hr>
             {{wtf.quick_form(form, button_map={'submit':'info btn-sm'})}}
         </div>
+    </div>
     </div>
     <footer class="fixed-bottom">
         <p class="text-center">Copyright, BlogApp 2022</p>
