--- a/app/templates/comment.html
+++ b/app/templates/comment.html
@@ -21,7 +21,7 @@
             {% endfor %}
         </div>
         <div class="col-md-2"></div>
-        <div class="col-md-5 pt-3">
+        <div class="card">
             {{wtf.quick_form(form ,button_map={'submit':'outline-primary'})}}
         </div>
     </div>
@@ -34,8 +34,8 @@
             </div>
         </div>
     </div>
-    <div class="col-md-2"></div>
-    <div class="col-md-5">
+    <div class="col-md-2">
+    <div class="card">
         {{wtf.quick_form(form, button_map={'submit':'outline-primary'})}}
     </div>
 
