--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -2,21 +2,21 @@
 {% import 'macros.html' as macro%}
 {% block styles%}
 {{ super() }}
-<link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}">
 {% endblock %}
 
 {% block content %}
 <div class="container">
-    <div class="row">
-        <div class="col-md-6">
-            <h4>Profile</h4>
+            <h4 class="text-center">My Profile</h4>
             <div class="media">
             </div>
-            <div class="media-body">
-                <h5>{{ current_user.username }}</h5>
-                <p>{{ current_user.email }}</p>
+            <div style="align-items: center;">
+                <h5>Name: {{ current_user.username }}</h5>
+                <p>Email: {{ current_user.email }}</p>
                 {% if user.bio %}
-                <p> {{user.bio}}</p>
+                <p> Bio: {{user.bio}}</p>
                 {%else%}
                 <p> {{user.username}} does not have a bio </p>
                 {% endif %}
@@ -24,9 +24,9 @@
                 <a href="{{url_for('main.update_profile',uname=user.username)}}">Click Here to Update Bio</a>
                 <form class="mt-4" action="{{url_for('main.update_pic',uname=user.username)}}" method="post"
                     enctype="multipart/form-data">
-                    <p class="title ">Update Profile photo</p>
+                    <p class="title " style="font-weight: bold;">Add Profile Photo</p>
                     <input type="file" name="photo" class="form-control" required><br>
-                    <input type="submit" class="btn btn-sm btn-info" value="Update">
+                    <input type="submit" class="btn btn-sm btn-info" value="Update Profile Photo">
                 </form>
                 {% endif %}
             </div>
