--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -15,7 +15,9 @@
         {{ message }}
         </div>
     {% endfor %}
+    <div class="card" style="align-items: center; height: 15rem;width: 40rem;margin-left: 18rem;">
     {{wtf.quick_form(login_form, button_map={'submit':'info'})}}
+</div>
     <p>You do not have an account <a href="{{url_for('auth.register')}}">Register here</a></p>
 </div>
 <footer class="fixed-bottom">
