--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,7 +14,7 @@
 {% block content %}
 <div class="container-fluid">
     <div class="row">
-    <div class="col-md-9">
+    <div class="col-md-6">
     {% for message in get_flashed_messages() %}
     <div class="alert alert-info">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -26,7 +26,7 @@
     <br>
     <div class="row posts">
         {% for blog in blogs %}
-        <article class="card">
+        <article class="card" style="width: 40rem;margin-left: 4rem;height: 20rem;margin-bottom: 2rem;">
             {% if blog.user.profile_pic_path %}
             <img class="rounded-circle blog-profile" src="{{url_for('static',filename=blog.user.profile_pic_path)}}" alt="">
             {% else %}
@@ -44,39 +44,20 @@
                 <span>
                     <a href="{{url_for('main.comment',blog_id = blog.id)}}"><button class="btn btn-info">Comments</button></a>
                     <a class="btn btn-info" href="{{url_for('main.update_blog', blog_id = blog.id)}}">Update Blog</a>
-                    <a href="{{ url_for('main.delete_post', blog_id = blog.id) }}"><button class="btn btn-danger btn-sm m-1" >Delete</button></a>
-                </span>
+                    </span>
                 </div>
             </div>              
         </article>
-        <div class="modal fade deleteModal-modal-sm" id="" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog modal-sm" role="document">
-            <div class="modal-content">
-            <div class="modal-header">
-                <p class="modal-title" id="deleteModalLabel">Are you sure you want to delete this blog?</p>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-            </div>
-            <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <form action="{{ url_for('main.delete_post', blog_id = blog.id) }}" method="POST">
-                <input class="btn btn-danger btn-sm" type="submit" value="Delete">
-            </form>
-            </div>
-            </div>
-        </div>
-        </div>
-    </article>
         {% endfor %}
     </div>
 </div>
-    <div class="col-md-3">
-        <h5>Daily Quotes</h5>
+    <div class="col-md-4" style="margin-top: 1.5rem;">
+        <h5 class="text-center" style="padding: 1rem;">Daily Quotes</h5>
         <p>{{ quotes.quote }}</p>
         <p>By: {{quotes.author}}</p>
+        
         <div class="">
+            <h6 class="text-center">Subscribe here</h6>
         {{wtf.quick_form(form ,button_map={'submit':'info btn-sm'})}}
         </div>
     </div>
