--- a/app/templates/new_blog.html
+++ b/app/templates/new_blog.html
@@ -7,15 +7,14 @@
 <!-- Content block -->
 {% block content %}
 <div class="container">
-    <div class="row">
-        <div class="col-md-7 text-center">
-            <div class="card">
-            <h3>{{title}}</h3>
+            <h3 style="text-align: center;">{{title}}</h3>
+            <br>
             <hr>
+            <div class="card" style="height: 18rem;">
             {{wtf.quick_form(form, button_map={'submit':'info btn-sm'})}}
         </div>
     </div>
-    </div>
+
     <footer class="fixed-bottom">
         <p class="text-center">Copyright, BlogApp 2022</p>
     </footer>
